Use length test result as boolean value
Simplify code to use result from "string length" and "llength" commands
directly as boolean value (0 means false, other numbers mean true).

--- a/init/tcl.in
+++ b/init/tcl.in
@@ -19,7 +19,7 @@ if {[info exists env(MODULES_RUN_QUARANTINE)]} {
         }
      }
    }
-   if {[llength $_mlre] > 0} {
+   if {[llength $_mlre]} {
      lappend _mlre "__MODULES_QUARANTINE_SET=1"
      set _mlre [linsert $_mlre 0 "env"]
    }
