--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -76,7 +76,7 @@ proc getLimitedAccessesInDirectory {modpath} {
                      lappend direlt_list $elt/$eltindir
                   }
                }
-               if {[llength $direlt_list] > 0} {
+               if {[llength $direlt_list]} {
                   lappend full_list {*}$direlt_list
                }
             }
@@ -186,7 +186,7 @@ proc formatModuleCacheContent {modpath} {
    }
 
    # prepend header if some content has been generated
-   if {[string length $content] != 0} {
+   if {[string length $content]} {
       regexp {^\d+\.\d+} {@MODULES_RELEASE@} majmin
       set content "#%Module$majmin$content"
    }
