--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -170,7 +170,7 @@ proc reportModuleEval {} {
                   $::g_moduleHiddenEval($evalid:$context)] msgrecidlist
             }
 
-            if {[llength $msgrecidlist] > 0} {
+            if {[llength $msgrecidlist]} {
                set moddesiglist {}
                foreach msgrecid $msgrecidlist {
                   lappend moddesiglist [getModuleDesignation $msgrecid]
@@ -321,7 +321,7 @@ proc formatErrStackTrace {errmsg loc {cmdlist {}}} {
    # get list of modulecmd.tcl internal procedure to filter out from stack
    # also add the way subcmds are launched through module proc ($cmdprocname)
    # skip this when no interp command list is provided
-   if {[llength $cmdlist] > 0} {
+   if {[llength $cmdlist]} {
       lassign [getDiffBetweenList [list {*}[info commands] {*}[info procs]\
          {$cmdprocname}] $cmdlist] filtercmdlist keepcmdlist
    } else {
@@ -410,9 +410,9 @@ proc sgr {keylist str {himatchmap {}} {othkeylist {}}} {
             }
          }
       }
-      if {[llength $othkeylist] == 0} {
+      if {![llength $othkeylist]} {
          # highlight matching substring
-         if {[llength $himatchmap] > 0} {
+         if {[llength $himatchmap]} {
             set str [string map $himatchmap $str]
          }
          if {[info exists sgrset]} {
@@ -451,7 +451,7 @@ proc sgr {keylist str {himatchmap {}} {othkeylist {}}} {
                }
             }
             # no need to look at next match string if this one was found
-            if {[llength $hiidxlist] > 0} {
+            if {[llength $hiidxlist]} {
                break
             }
          }
@@ -999,7 +999,7 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
    sgrdef tag_list show_tags vr_list vrsgr show_vrs {himatchmap {}}\
    {himatcharrvrmap {}} {himatcharrvrvalmap {}}} {
    # fetch sgr codes from tags to apply directly on main element
-   if {$show_tags && [llength $tag_list] > 0} {
+   if {$show_tags && [llength $tag_list]} {
       # if more codes than character in elt, additional codes apply to the
       # side tag list
       lassign [getTagSgrForModname $tag_list [string length $elt]] tagsgrlist\
@@ -1029,7 +1029,7 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
    append dispsgr $eltsuffix
 
    # format variant list if any
-   if {$show_vrs && [llength $vr_list] > 0} {
+   if {$show_vrs && [llength $vr_list]} {
       array set himatchvrvalarr $himatcharrvrvalmap
       array set himatchvrarr $himatcharrvrmap
       set commasgr [sgr se ,]
@@ -1066,7 +1066,7 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
             set hivrmap {}
             set hivrvalmap {}
          }
-         if {[string length $vrnameset] > 0} {
+         if {[string length $vrnameset]} {
             append vrssgr [sgr $vrsgr $vrnameset $hivrmap]
          }
          append vrssgr [sgr $vrsgr [lindex $vrsgrvalues 0] $hivrvalmap]
@@ -1082,7 +1082,7 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
    }
 
    # format remaining sym list
-   if {$show_syms && [llength $sym_list] > 0} {
+   if {$show_syms && [llength $sym_list]} {
       # track if a symbol has been reported excluding sym for alias '@'
       if {![info exists ::g_used_sym_nocolor] && ([llength $sym_list] > 1 ||
          [lindex $sym_list 0] ne {@})} {
@@ -1106,7 +1106,7 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
    }
 
    # format tag list if any remaining
-   if {$show_tags && [llength $tag_list] > 0} {
+   if {$show_tags && [llength $tag_list]} {
       append disp " <[join $tag_list :]>"
       set tagssgr " [sgr se <]"
       foreach tag $tag_list {
@@ -1161,7 +1161,7 @@ proc formatListEltToLongDisplay {elt eltsgr eltsuffix sym_list symsgr mtime\
    incr displen [string length $disp]
 
    # format remaining sym list
-   if {[llength $sym_list] > 0} {
+   if {[llength $sym_list]} {
       set symslen [string length [join $sym_list :]]
       foreach sym $sym_list {
          if {![info exists colonsgr]} {
@@ -1182,8 +1182,8 @@ proc formatListEltToLongDisplay {elt eltsgr eltsuffix sym_list symsgr mtime\
 }
 
 proc formatArrayValToJson {vallist} {
-   return [expr {[llength $vallist] > 0 ? "\[ \"[join $vallist {", "}]\" \]"\
-      : {[]}}]
+   return [expr {[llength $vallist] ? "\[ \"[join $vallist {", "}]\" \]" :\
+      {[]}}]
 }
 
 proc formatObjectValToJson {objlist} {
@@ -1287,7 +1287,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
    # is some module variant specified in search query
    set variant_spec_in_query 0
    foreach modspec $search_queries {
-      if {[llength [getVariantListFromVersSpec $modspec]] > 0} {
+      if {[llength [getVariantListFromVersSpec $modspec]]} {
          set variant_spec_in_query 1
          break
       }
@@ -1326,7 +1326,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
 
    # treat elements in specified order if any
    ##nagelfar ignore #2 Badly formed if statement
-   foreach elt [if {[llength $mod_list_order] == 0} {array names mod_list}\
+   foreach elt [if {![llength $mod_list_order]} {array names mod_list}\
       {set mod_list_order}] {
       if {$report_variant} {
          set vr_list [getVariantList $elt [expr {$json ? 4 : 7}] 0\
@@ -1434,7 +1434,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
    } else {
       set display_list {}
       # dictionary-sort results unless if output order is specified
-      if {[llength $mod_list_order] == 0} {
+      if {![llength $mod_list_order]} {
          set clean_list [lsort -dictionary $clean_list]
       }
       foreach disp $clean_list {
@@ -1448,7 +1448,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
    }
 
    # output table header if needed and not yet done
-   if {[llength $display_list] > 0 && $show_mtime && ![isStateDefined\
+   if {[llength $display_list] && $show_mtime && ![isStateDefined\
       theader_shown]} {
       setState theader_shown 1
       displayTableHeader {*}$theader_cols
@@ -1461,7 +1461,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
 
 proc showModulePath {} {
    set modpathlist [getModulePathList]
-   if {[llength $modpathlist] > 0} {
+   if {[llength $modpathlist]} {
       report {Search path for module files (in search order):}
       foreach path $modpathlist {
          report "  [sgr mp $path]"
@@ -1776,7 +1776,7 @@ proc displayKey {} {
       }
    }
 
-   if {[llength $display_list] > 0} {
+   if {[llength $display_list]} {
       # display header
       report Key:
       # display key content
