--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2187,8 +2187,7 @@ proc areModuleConstraintsSatisfied {{mod {}} {nporeq 0}} {
    # check if any loaded module violates its prereq or conflict constraints
    ##nagelfar vartype reqVioVar varName
    if {$mod eq {}} {
-      if {[array size ::g_conflictViolation] > 0 || [array size\
-         $reqVioVar] > 0} {
+      if {[array size ::g_conflictViolation] || [array size $reqVioVar]} {
          set ret 0
       }
    } else {
