--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -340,7 +340,7 @@ proc cmdModuleSearch {{mod {}} {search {}}} {
       # save results from this modulepath for interpretation step as there
       # is an extra round of search to match missing alias target, we cannot
       # process modulefiles found immediately
-      if {[array size interp_list] > 0} {
+      if {[array size interp_list]} {
          set interp_save($dir) [array get interp_list]
       }
    }
@@ -905,7 +905,7 @@ proc cmdModuleSavelist {show_oneperline show_mtime search_match args} {
       }
    }
 
-   if {[array size coll_arr] == 0} {
+   if {![array size coll_arr]} {
       if {!$json} {
          report $nocollmsg
       }
