Use unsigned integer test result as boolean value
Simplify code to directly use unsigned integer value as boolean value in
conditional tests (0 means false, other numbers mean true).

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -46,7 +46,7 @@ proc getMovementBetweenList {from to {extfrom {}} {extto {}} {cmp eq}} {
          ($cmp eq {eq} && $to_obj ne $from_obj) || $in_extfrom != $in_extto} {
          set list_equal 0
       }
-      if {$list_equal == 0} {
+      if {!$list_equal} {
          if {$to_obj ne {}} {
             lappend do $to_obj
          }
@@ -272,7 +272,7 @@ proc parseCollectionContent {fdata} {
 
    # analyze collection content
    foreach fline $fdata {
-      if {[regexp {module use (.*)$} $fline match patharg] == 1} {
+      if {[regexp {module use (.*)$} $fline match patharg]} {
          # paths are appended by default
          set stuff_path append
          # manage multiple paths and path options specified on single line,
@@ -302,7 +302,7 @@ proc parseCollectionContent {fdata} {
                }
             }
          }
-      } elseif {[regexp {module load (.*)$} $fline match modarg] == 1} {
+      } elseif {[regexp {module load (.*)$} $fline match modarg]} {
          # extract collection-specific flags from module specification
          switch -glob -- [lindex $modarg 0] {
             --notuasked {
