--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -1741,7 +1741,7 @@ proc parsePathCommandArgs {cmd mode dflbhv args} {
    }
 
    # some options cannot be mixed
-   if {$idx_val != 0 && ([info exists bhvopt] && $bhvopt !=\
+   if {$idx_val != 0 && ([info exists bhvopt] && $bhvopt ne\
       {--noop-on-unload})} {
       knerror "--index and $bhvopt options cannot be simultaneously set"
    }
