--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2113,8 +2113,8 @@ proc cmdModuleAutoinit {} {
       if {[file readable {@modulespath@}]} {
          set fdata [split [readFile {@modulespath@}] \n]
          foreach fline $fdata {
-            if {[regexp {^\s*(.*?)\s*(#.*|)$} $fline match patharg] == 1\
-               && $patharg ne {}} {
+            if {[regexp {^\s*(.*?)\s*(#.*|)$} $fline match patharg] &&\
+               $patharg ne {}} {
                foreach path [split $patharg :] {
                   # resolve path directory in case wildcard character used
                   set globlist [glob -types d -nocomplain $path]
